--- a/script/Cargo.toml
+++ b/script/Cargo.toml
@@ -21,6 +21,8 @@ tracing = "0.1.40"
 hex = "0.4.3"
 alloy-sol-types = { workspace = true }
 fibonacci-lib = { path = "../lib" }
+# spartan = { git = "https://github.com/microsoft/Spartan", branch = "master" }
+bincode = { version = "1.3.3", default-features = false }
 
 [build-dependencies]
 sp1-helper = "2.0.0"
